[package]
name = "rogue"
version = "0.1.0"
authors = ["dowon Cha <dowoncha@live.unc.edu>"]
edition = "2018"

[dependencies]
backtrace = "0.3"
cgmath = "0.17.0"
env_logger = "0.4.3"
log = "0.4.0"
rand = "0.7"
rand_distr = "0.2.1"
gl = "0.6.0"
shred = "0.4.2"
shred-derive = "0.3"
specs = "0.9.1"
time = "0.1"
error-chain = "*"
lazy_static = "*"
serde_json = "*"
rlua = "^0.16.3"
async-std = "0.99.10"

[dependencies.serde]
version = "*"
features = ["derive"]

[dependencies.uuid]
version = "0.7"
features = ["v4"]

[dependencies.ncurses]
version = "5.99.0"
features = ["menu"]

[features]
default = []
